<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_temp"
        android:title="@string/temp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
