<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddUserActivity" >
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item android:id="@+id/action_time"
        android:title="@string/action_time"
        android:icon="@drawable/ic_action_event"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_phone"
        android:title="@string/action_phone"
        android:icon="@drawable/ic_action_phone"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>