<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/userdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/crm_black" />
                <TextView
                    android:layout_marginLeft="@dimen/activity_samll_margin"
                    android:id="@+id/usertime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/crm_black" />
            </LinearLayout>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/adduser_inputusername"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/crm_black" />
            <EditText
                android:id="@+id/userphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/adduser_inputphone"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/crm_black"
                />
            <TextView
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="客户等级"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingbarlevel"
                android:stepSize="1.0"
                android:numStars="5"
                android:rating="2"

                />
            <TextView
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="客户评价"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingbarev"
                android:stepSize="1.0"
                android:numStars="5"
                android:rating="2"/>
            <EditText
                android:id="@+id/userrecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/adduser_adduserrecord"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/crm_black"
                android:minLines="3"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>